// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Playlist Default 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <a
      class="undefined actionable svelte-1lsew7w"
      href="#/playlist/1"
    >
      <header>
        <h3>
          My favourites
        </h3>
         
        <h4
          class="svelte-1lsew7w"
        >
          3 tracks
        </h4>
      </header>
       
      <p
        class="controls svelte-1lsew7w"
      >
        <button
          class="svelte-n2zup4 primary iconOnly large"
          data-testid="play"
        >
          <i
            class="material-icons svelte-n2zup4"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="svelte-n2zup4 primary iconOnly large"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-n2zup4"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </a>
  </div>
</section>
`;

exports[`Storyshots Components/Playlist Single Track 1`] = `
<section
  class="storybook-snapshot-container"
>
  <div>
    <a
      class="undefined actionable svelte-1lsew7w"
      href="#/playlist/1"
    >
      <header>
        <h3>
          My favourites
        </h3>
         
        <h4
          class="svelte-1lsew7w"
        >
          1 track
        </h4>
      </header>
       
      <p
        class="controls svelte-1lsew7w"
      >
        <button
          class="svelte-n2zup4 primary iconOnly large"
          data-testid="play"
        >
          <i
            class="material-icons svelte-n2zup4"
          >
            play_arrow
          </i>
           
           
           
        </button>
         
        <button
          class="svelte-n2zup4 primary iconOnly large"
          data-testid="enqueue"
        >
          <i
            class="material-icons svelte-n2zup4"
          >
            playlist_add
          </i>
           
           
           
        </button>
      </p>
    </a>
  </div>
</section>
`;
